# P3-T2

./: ArquivoDocente.cpp  ArquivoDocente.h  ArquivoPublicacoes.cpp  ArquivoPublicacoes.h  ArquivoQualificacoes.cpp  ArquivoQualificacoes.h  ArquivoRegras.cpp  ArquivoRegras.h  ArquivoVeiculo.cpp  ArquivoVeiculo.h  CMakeLists.txt  Docente.cpp  Docente.h  ExceptionFile.cpp  ExceptionFile.h  Main.cpp  Makefile  Publicacao.cpp  Publicacao.h  PublicacaoConferecia.cpp  PublicacaoConferecia.h  PublicacaoPeriodico.cpp  PublicacaoPeriodico.h  Qualis.cpp  Qualis.h  RegraPontuacao.cpp  RegraPontuacao.h  RelatorioEstatisticas.cpp  RelatorioEstatisticas.h  RelatorioPublicacao.cpp  RelatorioPublicacao.h  RelatorioRecredenciamento.cpp  RelatorioRecredenciamento.h  Veiculo.cpp  Veiculo.h
